# bot-de-respuestas

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.sh  valgrind.sh
.github/classroom/: autograding.json
include/: Herta.hpp
src/: Herta.cpp
tests/: CMakeLists.txt  HertaTest.cpp
